# jni-baresip-sdk

./: README.md
app/: CMakeLists.txt
app/cmake/baresip/: CMakeLists.txt
app/cmake/ilbc/: CMakeLists.txt
app/cmake/re/: CMakeLists.txt
app/cmake/rem/: CMakeLists.txt
